TestSuite/errors/err0071.pas
  	 type TClass = class(System.Delegate)
end;

type TClass2 = class(System.MulticastDelegate)
end;

begin

end.